MMA-8830 roles-claimet er et json-array